monitoring-namespace/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    reflector.v1.k8s.emberstack.com/reflects: "cert-manager/tls-secret"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.techvibe.app
      secretName: tls-secret
  rules:
    - host: grafana.techvibe.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: service
